# bank-loan-defaulter-prediction

./: .gitignore  README.md  pyproject.toml  requirements.txt
conf/: logging.yml
conf/base/: catalog.yml  parameters_data_science.yml
notebooks/: 01_data_quality_check.ipynb  02_numerical_eda.ipynb  03_categorical_eda.ipynb
src/bank_loan_defaulter_prediction/: __init__.py  __main__.py
src/bank_loan_defaulter_prediction/pipelines/data_processing/: nodes.py  pipeline.py
src/bank_loan_defaulter_prediction/pipelines/data_science/: nodes.py  pipeline.py
src/bank_loan_defaulter_prediction/pipelines/reporting/: nodes.py  pipeline.py
src/base/: __init__.py  conf.py  data_loader.py  py_logger.py
